--- a/detailpagina.html
+++ b/detailpagina.html
@@ -103,17 +103,17 @@
 
     <main>
     
-    <!-- IN EEN UL ZETTEN MET STERRETJES-->
+    <!-- UL MET STERRETJES-->
      <ul>
         <li><a href="https://www.adidas.nl/">Home /</a></li>
         <li><a href="https://www.adidas.nl/search?q=schoenen">Schoenen /</a></li>
         <li><a href="https://www.adidas.nl/search?q=running">Running</a> </li>
     
-        <li><a href="#reviews"><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="currentColor" stroke="0" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg></a></li>
-        <li><a href="#reviews"><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="currentColor" stroke="0" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg></a></li>
-        <li><a href="#reviews"><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="currentColor" stroke="0" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg></a></li>
-        <li><a href="#reviews"><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="currentColor" stroke="0" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg></a></li>
-        <li><a href="#reviews"><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="none" stroke="currentColor" stroke-miterlimit="10" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg></a></li>
+        <li><a href="#beoordelingen"><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="currentColor" stroke="0" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg></a></li>
+        <li><a href="#beoordelingen"><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="currentColor" stroke="0" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg></a></li>
+        <li><a href="#beoordelingen"><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="currentColor" stroke="0" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg></a></li>
+        <li><a href="#beoordelingen"><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="currentColor" stroke="0" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg></a></li>
+        <li><a href="#beordelingen"><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="none" stroke="currentColor" stroke-miterlimit="10" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg></a></li>
         <li><a href="#">4</a></li>
     </ul>
 
@@ -139,12 +139,12 @@
         <li><img src="images/adistar-blauw-bovenaanzicht.jpg" alt="blauwe adistar bovenaanzicht"></li>
         <li><img src="images/adistar-blauw-punt-schoen.jpg" alt="blauwe adistar schoen punt"></li>
 
-        <li><img src="images" alt="blauwe adistar vooraanzicht"></li>
-        <li><img src="images" alt="blauwe adistar achteraazicht"></li>
-        <li><img src="images" alt="blauwe adistar zijaanzicht"></li>
-        <li><img src="images" alt="blauwe adistar tweeschoenen"></li>
-        <li><img src="images" alt="blauwe adistar rechteraanzicht"></li>
-        <li><img src="images" alt="blauwe adistar "></li>
+        <li><img src="images/adistar-blauw-achterkant.jpg" alt="blauwe adistar achterkant"></li>
+        <li><img src="images/adistar-blauw-onderkant.jpg" alt="blauwe adistar onderkant"></li>
+        <li><img src="images/adistar-blauw-schuin.jpg" alt="blauwe adistar schuin"></li>
+        <li><img src="images/adistar-blauw-2schoenen.jpg" alt="blauwe adistar tweeschoenen"></li>
+        <li><img src="images/adistar-blauw-achterkant2.jpg" alt="blauwe adistar achterkant"></li>
+        <li><img src="images/adistar-blauw-zijkant2.jpg" alt="blauwe adistar zijkant"></li>
       </ul>
 </section>
 
@@ -241,7 +241,7 @@
 
  <!--dropdowns -->
  
-	<details id="reviews">
+	<details>
 	  <summary>Beschrijving<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M16 19.2929L8.35359 11.6465L7.64648 12.3536L16 20.7071L24.3536 12.3536L23.6465 11.6465L16 19.2929Z" fill="var(--icon-primary-color, #000)"></path></svg></summary>
       <h2>DE Y2K HARDLOOPSTIJL LEEFT VOORT IN DEZE LIFESTYLE SNEAKERS.</h2>
 	 <p>De adidas Adistar Control 5 sneakers brengen een iconische hardloopstijl uit de jaren 2000 terug. Het bovenwerk van open mesh is gelaagd met metallic zilveren details en synthetische 3-Stripes. Een EVA-middenzool en Adiprene+ in de voorvoet bieden demping voor een soepele tred, terwijl de rubberen loopzool robuuste grip toevoegt.    
@@ -249,7 +249,7 @@
 	</details>
   
 	<details>
-	  <summary>kenmerken<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M16 19.2929L8.35359 11.6465L7.64648 12.3536L16 20.7071L24.3536 12.3536L23.6465 11.6465L16 19.2929Z" fill="var(--icon-primary-color, #000)"></path></svg></summary>
+	  <summary>Kenmerken<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M16 19.2929L8.35359 11.6465L7.64648 12.3536L16 20.7071L24.3536 12.3536L23.6465 11.6465L16 19.2929Z" fill="var(--icon-primary-color, #000)"></path></svg></summary>
       <ul>
         <li>Normale pasvorm</li>
         <li>Vetersluiting</li>
@@ -261,7 +261,23 @@
       </ul>      
 	</details>
   
+	<details id="beoordelingen">
+	  <summary>Beoordelingen (4)<svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="currentColor" stroke="0" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path fill="currentColor" stroke="0" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg>
+    <svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="currentColor" stroke="0" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg>
+    <svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="currentColor" stroke="0" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg>
+    <svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="none" stroke="currentColor" stroke-miterlimit="10" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg>
+    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M16 19.2929L8.35359 11.6465L7.64648 12.3536L16 20.7071L24.3536 12.3536L23.6465 11.6465L16 19.2929Z" fill="var(--icon-primary-color, #000)"></path></svg>
+  </summary>
 
+  <h2>Beoordeel het product</h2>
+  <ul>
+    <li><button><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke="currentColor" stroke-miterlimit="10" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg>1</button></li>
+    <li><button><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke="currentColor" stroke-miterlimit="10" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg>2</button></li>
+    <li><button><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke="currentColor" stroke-miterlimit="10" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg>3</button></li>
+    <li><button><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke="currentColor" stroke-miterlimit="10" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg>4</button></li>
+    <li><button><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke="currentColor" stroke-miterlimit="10" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg>5</button></li>
+</ul>
+  </details>
 
 <!-- 3e section lijstje met looks voorstellen -->
 <section>
@@ -360,7 +376,7 @@
 
 <!-- 5e section jouw mening kader-->
 <section>
-    <h2>JOUW MEING TELT!</h2>
+    <h2>JOUW MENING TELT!</h2>
     <p>We streven ernaar om je nog beter van dienst te zijn en stellen je feedback zeer op prijs.</p>
 
     <a href="#">Terug naar boven <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M16 11.293L24.3536 19.6465L23.6465 20.3536L16 12.7072L8.35359 20.3536L7.64648 19.6465L16 11.293Z" fill="var(--icon-primary-color, #000)"></path></svg></a>
