--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
   <h2>dropdowns</h2>
 
 	<details>
-	  <summary>LET'S MOVE <span>▼</span></summary>
+	  <summary>LET'S MOVE <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M16 19.2929L8.35359 11.6465L7.64648 12.3536L16 20.7071L24.3536 12.3536L23.6465 11.6465L16 19.2929Z" fill="var(--icon-primary-color, #000)"></path></svg></summary>
 	  <ul>
 		<li><a href="https://www.adidas.nl/hardlopen-schoenen">Hardloopschoenen</a></li>
 		<li><a href="https://www.adidas.nl/fitness_en_training-schoenen">Fitness en Training Schoenen</a></li>
@@ -419,7 +419,7 @@
 	</details>
   
 	<details>
-	  <summary>STRAATICONEN <span>▼</span></summary>
+	  <summary>STRAATICONEN <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M16 19.2929L8.35359 11.6465L7.64648 12.3536L16 20.7071L24.3536 12.3536L23.6465 11.6465L16 19.2929Z" fill="var(--icon-primary-color, #000)"></path></svg></summary>
 	  <ul>
 		<li><a href="https://www.adidas.nl/gazelle">Gazelle</a></li>
 		<li><a href="https://www.adidas.nl/samba?cm_mmc=AdieSEM_Google-_-adidas-Product_Ranges-B-Exact-ROI-PSTRB-_-Franchise+-+Samba-_-samba+adidas&cm_mmca1=NL&cm_mmca2=e&ds_kid=297370459085&af_reengagement_window=30d&is_retargeting=true&pid=googleadwords_temp&c=adidas-Product_Ranges-B-Exact-ROI-PSTRB&af_channel=Search&gclsrc=aw.ds&gad_source=1&gad_campaignid=1010469781&gbraid=0AAAAADwBzxqN9JTw-H3H2K7bPHBGw-w68&gclid=Cj0KCQjw5onGBhDeARIsAFK6QJYo7ltM_V5ADKME_M217CgJLMNKbNHGdT4O8kKstjYOxZua9qGVBFwaAo1zEALw_wcB">Samba</a></li>
@@ -427,7 +427,7 @@
 	</details>
   
 	<details>
-	  <summary>ALLEDAAGSE BENODIGDHEDEN <span>▼</span></summary>
+	  <summary>ALLEDAAGSE BENODIGDHEDEN <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M16 19.2929L8.35359 11.6465L7.64648 12.3536L16 20.7071L24.3536 12.3536L23.6465 11.6465L16 19.2929Z" fill="var(--icon-primary-color, #000)"></path></svg></summary>
 	  <ul>
 		<li><a href="https://www.adidas.nl/originals?cm_mmc=AdieSEM_Google-_-adidas-Product_Ranges-B-Exact-ROI-PSTRB-_-Franchise+-+Originals-_-originals+adidas&cm_mmca1=NL&cm_mmca2=e&ds_kid=296052243559&af_reengagement_window=30d&is_retargeting=true&pid=googleadwords_temp&c=adidas-Product_Ranges-B-Exact-ROI-PSTRB&af_channel=Search&gclsrc=aw.ds&gad_source=1&gad_campaignid=1010469781&gbraid=0AAAAADwBzxqN9JTw-H3H2K7bPHBGw-w68&gclid=Cj0KCQjw5onGBhDeARIsAFK6QJbQavMcOdSXN8lUkED6mHQfPKCVXRS2daGq2MSmct087j5PbcheltMaAo9oEALw_wcB">Orginals Schoenen</a></li>
 		<li><a href="https://www.adidas.nl/shirts-kleding?cm_mmc=AdieSEM_Google-_-adidas-Product_Types-B-Exact-ROI-PSTRB-_-t-shirt-_-t-shirt+adidas&cm_mmca1=NL&cm_mmca2=e&ds_kid=296200125096&af_reengagement_window=30d&is_retargeting=true&pid=googleadwords_temp&c=adidas-Product_Types-B-Exact-ROI-PSTRB&af_channel=Search&gclsrc=aw.ds&gad_source=1&gad_campaignid=1010470468&gbraid=0AAAAADwBzxqu4aWvdWAFLnjV2zGBeHGzj&gclid=Cj0KCQjw5onGBhDeARIsAFK6QJYFdH6FTr-F3WGxEZEtT35eZrGanckqBlreQgD7pV882URElIamrk4aAmwREALw_wcB">T-shirts</a></li>
