--- a/index.html
+++ b/index.html
@@ -16,30 +16,13 @@
 <body>
 
 	
+	
 	<header>
-		<div>
-			<button>Gratis retouneren en omruilen</button>
-			<p>Gratis standaardverzending met adiClub</p>
-			<p>Meld je aan bij adiClub om te profiteren van gratis standaardverzending en punten te verdienen met elke bestelling.
-			<a href="https://www.adidas.nl/account-login">Wordt gratis lid van adiclub</a>
-			<a href="https://www.adidas.nl/help/bezorging/wat-is-de-levertijd--wat-zijn-de-verzendkosten">Meer informatie</a>	
-			</p>
-		
-			<p>adidas Collaboration Archive</p>
-			<p>Iconische adidas samenwerkingen, nu tijdelijk verkrijgbaar tegen exclusieve prijzen.
-			<a href="https://www.adidas.nl/collaborations_archive_sale">Kom een kijkje nemen</a>
-			</p>
-			
-			<p>Gratis retourneren en omruilen</p>
-			<p>Ruil of retourneer je item(s) gratis binnen 30 dagen. Gecustomizede artikelen kunnen niet geretourneerd worden.
-			<a href="https://www.adidas.nl/help/retour-vergoeding">Lees meer over retouneren</a>
-			<a href="https://www.adidas.nl/help/ruilen">Lees meer over omruilingen</a>
-			</p>
-           
+    	<div>
+			<button>Gratis retouneren en omruilen</button> 
 		</div>
 
-
-		<!-- iconen in header -->
+				<!-- iconen in header -->
 	<ul>
 	   <li><button><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M28 10.5H4V9.5H28V10.5Z" fill="var(--icon-primary-color, #000)"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28 16.5H4V15.5H28V16.5Z" fill="var(--icon-primary-color, #000)"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28 22.5H4V21.5H28V22.5Z" fill="var(--icon-primary-color, #000)"></path></svg></button></li>
 	   <li><a href="https://www.adidas.nl/update_browser"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.7206 6H11.7071L16 10.2929L20.2929 6H25.2794L29.6328 13.0743L16 26.7071L2.36719 13.0743L6.7206 6ZM7.2794 7L3.63281 12.9257L16 25.2929L28.3672 12.9257L24.7206 7H20.7071L16 11.7071L11.2929 7H7.2794Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
@@ -49,22 +32,22 @@
 	   <li><a href="https://www.adidas.nl/cart"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M21 4H11V8H6V28H26V8H21V4ZM20 9V12H21V9H25V27H7V9H11V12H12V9H20ZM20 8V5H12V8H20Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
 	</ul>
 	
-	   <nav>
-		  <!-- LOGO (midden) + sluitknop (rechtsboven) -->
-		  <img src="images/adidas-logo.png" alt="adidas logo">
-		  <button aria-hidden="true"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.707 16.0001L23.8535 8.85359L23.1464 8.14648L15.9999 15.293L8.85354 8.14649L8.14642 8.85359L15.2928 16.0001L8.14643 23.1465L8.85353 23.8536L15.9999 16.7072L23.1464 23.8536L23.8535 23.1465L16.707 16.0001Z" fill="var(--icon-primary-color, #000)"></path></svg></button>
-	  
-		  <!-- hoofdmenu -->
-		  <ul>
-			<li><button aria-hidden="true">HEREN<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class=""><path fill-rule="evenodd" clip-rule="evenodd" d="M19.2929 16L11.6465 8.35359L12.3536 7.64648L20.7071 16L12.3536 24.3536L11.6465 23.6465L19.2929 16Z" fill="var(--icon-primary-color, #000)"></path></svg></button></li>
-			<li><a href="#">DAMES<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class=""><path fill-rule="evenodd" clip-rule="evenodd" d="M19.2929 16L11.6465 8.35359L12.3536 7.64648L20.7071 16L12.3536 24.3536L11.6465 23.6465L19.2929 16Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
-			<li><a href="#">KINDEREN<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class=""><path fill-rule="evenodd" clip-rule="evenodd" d="M19.2929 16L11.6465 8.35359L12.3536 7.64648L20.7071 16L12.3536 24.3536L11.6465 23.6465L19.2929 16Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
-			<li><a href="#">SCHOENEN<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class=""><path fill-rule="evenodd" clip-rule="evenodd" d="M19.2929 16L11.6465 8.35359L12.3536 7.64648L20.7071 16L12.3536 24.3536L11.6465 23.6465L19.2929 16Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
-			<li><a href="#">KLEDING<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class=""><path fill-rule="evenodd" clip-rule="evenodd" d="M19.2929 16L11.6465 8.35359L12.3536 7.64648L20.7071 16L12.3536 24.3536L11.6465 23.6465L19.2929 16Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
-			<li><a href="#">SPORTEN<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class=""><path fill-rule="evenodd" clip-rule="evenodd" d="M19.2929 16L11.6465 8.35359L12.3536 7.64648L20.7071 16L12.3536 24.3536L11.6465 23.6465L19.2929 16Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
-			<li><a href="#">OUTLET<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class=""><path fill-rule="evenodd" clip-rule="evenodd" d="M19.2929 16L11.6465 8.35359L12.3536 7.64648L20.7071 16L12.3536 24.3536L11.6465 23.6465L19.2929 16Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
-		  </ul>
-	  
+		<nav>
+			<!-- LOGO (midden) + sluitknop (rechtsboven) in menu -->
+			<img src="images/adidas-logo.png" alt="adidas logo">
+			<button><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.707 16.0001L23.8535 8.85359L23.1464 8.14648L15.9999 15.293L8.85354 8.14649L8.14642 8.85359L15.2928 16.0001L8.14643 23.1465L8.85353 23.8536L15.9999 16.7072L23.1464 23.8536L23.8535 23.1465L16.707 16.0001Z" fill="var(--icon-primary-color, #000)"></path></svg></button>
+		
+			<!-- hoofdmenu -->
+			<ul>
+				<li><button>HEREN<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class=""><path fill-rule="evenodd" clip-rule="evenodd" d="M19.2929 16L11.6465 8.35359L12.3536 7.64648L20.7071 16L12.3536 24.3536L11.6465 23.6465L19.2929 16Z" fill="var(--icon-primary-color, #000)"></path></svg></button></li>
+				<li><a href="#">DAMES<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class=""><path fill-rule="evenodd" clip-rule="evenodd" d="M19.2929 16L11.6465 8.35359L12.3536 7.64648L20.7071 16L12.3536 24.3536L11.6465 23.6465L19.2929 16Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
+				<li><a href="#">KINDEREN<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class=""><path fill-rule="evenodd" clip-rule="evenodd" d="M19.2929 16L11.6465 8.35359L12.3536 7.64648L20.7071 16L12.3536 24.3536L11.6465 23.6465L19.2929 16Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
+				<li><a href="#">SCHOENEN<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class=""><path fill-rule="evenodd" clip-rule="evenodd" d="M19.2929 16L11.6465 8.35359L12.3536 7.64648L20.7071 16L12.3536 24.3536L11.6465 23.6465L19.2929 16Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
+				<li><a href="#">KLEDING<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class=""><path fill-rule="evenodd" clip-rule="evenodd" d="M19.2929 16L11.6465 8.35359L12.3536 7.64648L20.7071 16L12.3536 24.3536L11.6465 23.6465L19.2929 16Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
+				<li><a href="#">SPORTEN<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class=""><path fill-rule="evenodd" clip-rule="evenodd" d="M19.2929 16L11.6465 8.35359L12.3536 7.64648L20.7071 16L12.3536 24.3536L11.6465 23.6465L19.2929 16Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
+				<li><a href="#">OUTLET<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class=""><path fill-rule="evenodd" clip-rule="evenodd" d="M19.2929 16L11.6465 8.35359L12.3536 7.64648L20.7071 16L12.3536 24.3536L11.6465 23.6465L19.2929 16Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
+			</ul>
+		
 		  <!-- klikbare links onder elkaar -->
 		  <ul>
 			<li><a href="#">Bestellingsstatus</a></li>
@@ -76,19 +59,25 @@
 		  <!-- p is ALLEEN zichtbaar op hoofdmenu -->
 		  <p>adiClub-leden: Gratis verzending op alle bestellingen. Makkelijk retourneren &amp; omruilen voor iedereen.</p>
 	  
+
+	<div>
+  <img 
+    src="https://adl-foundation.adidas.com/flags/1-3-1/nl.svg" 
+    alt="Nederlandse vlag">
+  <span>Nederland</span>
+</div>
+
 		  <!-- submenu 2: HEREN -->
 		  <ul>
-			<li><button>← Terug</button></li>
-			<li><button>Schoenen</button></li>
-			<li><a href="#">Kleding</a></li>
-			<li><a href="#">Accessoires</a></li>
-			<li><a href="#">Sporten</a></li>
-			<li><a href="#">Merken</a></li>
+			<li><button>Schoenen<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class=""><path fill-rule="evenodd" clip-rule="evenodd" d="M19.2929 16L11.6465 8.35359L12.3536 7.64648L20.7071 16L12.3536 24.3536L11.6465 23.6465L19.2929 16Z" fill="var(--icon-primary-color, #000)"></path></svg></button></li>
+			<li><a href="#">Kleding<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class=""><path fill-rule="evenodd" clip-rule="evenodd" d="M19.2929 16L11.6465 8.35359L12.3536 7.64648L20.7071 16L12.3536 24.3536L11.6465 23.6465L19.2929 16Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
+			<li><a href="#">Accessoires<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class=""><path fill-rule="evenodd" clip-rule="evenodd" d="M19.2929 16L11.6465 8.35359L12.3536 7.64648L20.7071 16L12.3536 24.3536L11.6465 23.6465L19.2929 16Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
+			<li><a href="#">Sporten<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class=""><path fill-rule="evenodd" clip-rule="evenodd" d="M19.2929 16L11.6465 8.35359L12.3536 7.64648L20.7071 16L12.3536 24.3536L11.6465 23.6465L19.2929 16Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
+			<li><a href="#">Merken<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class=""><path fill-rule="evenodd" clip-rule="evenodd" d="M19.2929 16L11.6465 8.35359L12.3536 7.64648L20.7071 16L12.3536 24.3536L11.6465 23.6465L19.2929 16Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
 		  </ul>
 	  
 		  <!-- submenu 3: HEREN → SCHOENEN (enkel deze sub werkt) -->
 		  <ul>
-			<li><button>← Terug</button></li>
 			<li><a href="#">Sneakers</a></li>
 			<li><a href="#">Fitness en Training</a></li>
 			<li><a href="#">Voetbalschoenen</a></li>
