--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- iconen in header -->
       <ul>
         <li>
-          <button>
+          <button aria-label="Menu openen">
             <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M28 10.5H4V9.5H28V10.5Z" fill="var(--icon-primary-color, #000)"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28 16.5H4V15.5H28V16.5Z" fill="var(--icon-primary-color, #000)"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28 22.5H4V21.5H28V22.5Z" fill="var(--icon-primary-color, #000)"></path></svg>
           </button>
         </li>
@@ -30,7 +30,7 @@
 		</a>
         </li>
         <li>
-          <a href="index.html">
+          <a href="index.html" aria-label="Home">
             <svg role="presentation" viewBox="100 100 50 32" xmlns="http://www.w3.org/2000/svg">
               <title>Shop</title>
               <path fill-rule="evenodd" clip-rule="evenodd" d="M 150.07 131.439 L 131.925 100 L 122.206 105.606 L 137.112 131.439 L 150.07 131.439 Z M 132.781 131.439 L 120.797 110.692 L 111.078 116.298 L 119.823 131.439 L 132.781 131.439 Z M 109.718 121.401 L 115.509 131.439 L 102.551 131.439 L 100 127.007 L 109.718 121.401 Z" fill="black"></path>
@@ -38,26 +38,26 @@
           </a>
         </li>
         <li>
-          <a href="https://www.adidas.nl/account-login">
+          <a href="https://www.adidas.nl/account-login" aria-label="Account">
             <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M9.22548 20H22.7744L26.4218 25.7316L25.5781 26.2684L22.2255 21H9.77443L6.42179 26.2684L5.57812 25.7316L9.22548 20Z" fill="var(--icon-primary-color, #000)"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16 17C18.761 17 21 14.761 21 12C21 9.23895 18.761 7 16 7C13.2377 7 11 9.23881 11 12C11 14.7612 13.2377 17 16 17ZM16 18C19.3133 18 22 15.3133 22 12C22 8.68667 19.3133 6 16 6C12.6853 6 9.99996 8.68667 9.99996 12C9.99996 15.3133 12.6853 18 16 18Z" fill="var(--icon-primary-color, #000)"></path></svg>
           </a>
         </li>
         <li>
-          <button>
+          <button aria-label="Zoeken">
             <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.0909 6C9.62242 6 6 9.62242 6 14.0909C6 18.5594 9.62242 22.1818 14.0909 22.1818C16.3253 22.1818 18.3473 21.2768 19.812 19.812C21.2768 18.3473 22.1818 16.3253 22.1818 14.0909C22.1818 9.62242 18.5594 6 14.0909 6ZM5 14.0909C5 9.07014 9.07014 5 14.0909 5C19.1117 5 23.1818 9.07014 23.1818 14.0909C23.1818 16.4212 22.3045 18.5474 20.863 20.1559L27.3536 26.6464L26.6464 27.3536L20.1559 20.863C18.5474 22.3045 16.4212 23.1818 14.0909 23.1818C9.07014 23.1818 5 19.1117 5 14.0909Z" fill="var(--icon-primary-color, #000)"></path></svg>
           </button>
         </li>
         <li>
-          <a href="https://www.adidas.nl/cart">
+          <a href="https://www.adidas.nl/cart" aria-label="Winkelwagen">
             <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M21 4H11V8H6V28H26V8H21V4ZM20 9V12H21V9H25V27H7V9H11V12H12V9H20ZM20 8V5H12V8H20Z" fill="var(--icon-primary-color, #000)"></path></svg><span>0</span>
           </a>
         </li>
       </ul>
 
-      <nav>
+      <nav aria-label="Hoofdmenu">
         <!-- LOGO (midden) + sluitknop (rechtsboven) in menu -->
         <img src="images/adidas-logo.png" alt="adidas logo">
-        <button>
+        <button aria-label="Menu sluiten">
           <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.707 16.0001L23.8535 8.85359L23.1464 8.14648L15.9999 15.293L8.85354 8.14649L8.14642 8.85359L15.2928 16.0001L8.14643 23.1465L8.85353 23.8536L15.9999 16.7072L23.1464 23.8536L23.8535 23.1465L16.707 16.0001Z" fill="var(--icon-primary-color, #000)"></path></svg>
         </button>
 
@@ -244,7 +244,7 @@
             <a href="detailpagina.html">
               <img src="images/adistar-control-5-schoenen.jpg" alt="zilvere adidas schoen">
             </a>
-            <button>
+            <button aria-label="Zet op verlanglijst">
               <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.7206 6H11.7071L16 10.2929L20.2929 6H25.2794L29.6328 13.0743L16 26.7071L2.36719 13.0743L6.7206 6ZM7.2794 7L3.63281 12.9257L16 25.2929L28.3672 12.9257L24.7206 7H20.7071L16 11.7071L11.2929 7H7.2794Z" fill="var(--icon-primary-color, #000)"></path></svg>
             </button>
           </li>
@@ -253,7 +253,7 @@
             <a href="https://www.adidas.nl/japan-lo-brain-dead-schoenen%0A/JQ9214.html?pr=taxonomy_rr&slot=2&rec=mt">
               <img src="images/blauwzwart-schoen.jpg" alt="blauwe adidas schoen">
             </a>
-            <button>
+            <button aria-label="Zet op verlanglijst">
               <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.7206 6H11.7071L16 10.2929L20.2929 6H25.2794L29.6328 13.0743L16 26.7071L2.36719 13.0743L6.7206 6ZM7.2794 7L3.63281 12.9257L16 25.2929L28.3672 12.9257L24.7206 7H20.7071L16 11.7071L11.2929 7H7.2794Z" fill="var(--icon-primary-color, #000)"></path></svg>
             </button>
           </li>
@@ -262,7 +262,7 @@
             <a href="https://www.adidas.nl/sc-powerphase-schoenen%0A/JQ3936.html?pr=taxonomy_rr&slot=3&rec=mt">
               <img src="images/beige-schoen.jpg" alt="beige adidas schoen">
             </a>
-            <button>
+            <button aria-label="Zet op verlanglijst">
               <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.7206 6H11.7071L16 10.2929L20.2929 6H25.2794L29.6328 13.0743L16 26.7071L2.36719 13.0743L6.7206 6ZM7.2794 7L3.63281 12.9257L16 25.2929L28.3672 12.9257L24.7206 7H20.7071L16 11.7071L11.2929 7H7.2794Z" fill="var(--icon-primary-color, #000)"></path></svg>
             </button>
           </li>
@@ -271,7 +271,7 @@
             <a href="https://www.adidas.nl/pw-adizero-evo-sl%0A/KI3393.html?pr=taxonomy_rr&slot=4&rec=mt">
               <img src="images/witte-schoen.jpg" alt="witte adidas schoen">
             </a>
-            <button>
+            <button aria-label="Zet op verlanglijst">
               <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.7206 6H11.7071L16 10.2929L20.2929 6H25.2794L29.6328 13.0743L16 26.7071L2.36719 13.0743L6.7206 6ZM7.2794 7L3.63281 12.9257L16 25.2929L28.3672 12.9257L24.7206 7H20.7071L16 11.7071L11.2929 7H7.2794Z" fill="var(--icon-primary-color, #000)"></path></svg>
             </button>
           </li>
@@ -280,7 +280,7 @@
             <a href="https://www.adidas.nl/italia-60s-made-in-italy/JR8378.html?pr=taxonomy_rr&slot=5&rec=mt">
               <img src="images/bruine-schoen.jpg" alt="bruine adidas schoen">
             </a>
-            <button>
+            <button aria-label="Zet op verlanglijst">
               <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.7206 6H11.7071L16 10.2929L20.2929 6H25.2794L29.6328 13.0743L16 26.7071L2.36719 13.0743L6.7206 6ZM7.2794 7L3.63281 12.9257L16 25.2929L28.3672 12.9257L24.7206 7H20.7071L16 11.7071L11.2929 7H7.2794Z" fill="var(--icon-primary-color, #000)"></path></svg>
             </button>
           </li>
@@ -289,7 +289,7 @@
             <a href="https://www.adidas.nl/pw-adizero-evo-sl-%0A/KI3392.html?pr=taxonomy_rr&slot=6&rec=mt">
               <img src="images/zwarte-schoen.jpg" alt="zwarte adidas schoen">
             </a>
-            <button>
+            <button aria-label="Zet op verlanglijst">
               <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.7206 6H11.7071L16 10.2929L20.2929 6H25.2794L29.6328 13.0743L16 26.7071L2.36719 13.0743L6.7206 6ZM7.2794 7L3.63281 12.9257L16 25.2929L28.3672 12.9257L24.7206 7H20.7071L16 11.7071L11.2929 7H7.2794Z" fill="var(--icon-primary-color, #000)"></path></svg>
             </button>
           </li>
@@ -301,7 +301,7 @@
             <a href="https://www.adidas.nl/handball-spezial-comfort-closure-schoenen-met-elastische-veters-kids/KI3944.html?pr=taxonomy_rr&slot=1&rec=mt">
               <img src="images/campus-taupe.jpg" alt="adidas campus taupe">
             </a>
-            <button>
+            <button aria-label="Zet op verlanglijst">
               <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.7206 6H11.7071L16 10.2929L20.2929 6H25.2794L29.6328 13.0743L16 26.7071L2.36719 13.0743L6.7206 6ZM7.2794 7L3.63281 12.9257L16 25.2929L28.3672 12.9257L24.7206 7H20.7071L16 11.7071L11.2929 7H7.2794Z" fill="var(--icon-primary-color, #000)"></path></svg>
             </button>
           </li>
@@ -310,7 +310,7 @@
             <a href="https://www.adidas.nl/handball-spezial-schoenen-kids/KI3943.html?pr=taxonomy_rr&slot=2&rec=mt">
               <img src="images/spezial-bruin-schoen.jpg" alt="adidas spezial bruin kids">
             </a>
-            <button>
+            <button aria-label="Zet op verlanglijst">
               <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.7206 6H11.7071L16 10.2929L20.2929 6H25.2794L29.6328 13.0743L16 26.7071L2.36719 13.0743L6.7206 6ZM7.2794 7L3.63281 12.9257L16 25.2929L28.3672 12.9257L24.7206 7H20.7071L16 11.7071L11.2929 7H7.2794Z" fill="var(--icon-primary-color, #000)"></path></svg>
             </button>
           </li>
@@ -319,7 +319,7 @@
             <a href="https://www.adidas.nl/handball-spezial-schoenen-kids/JP8021.html?pr=taxonomy_rr&slot=3&rec=mt">
               <img src="images/spezial-bordeaux-schoen.jpg" alt="adidas spezial bordeaux">
             </a>
-            <button>
+            <button aria-label="Zet op verlanglijst">
               <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.7206 6H11.7071L16 10.2929L20.2929 6H25.2794L29.6328 13.0743L16 26.7071L2.36719 13.0743L6.7206 6ZM7.2794 7L3.63281 12.9257L16 25.2929L28.3672 12.9257L24.7206 7H20.7071L16 11.7071L11.2929 7H7.2794Z" fill="var(--icon-primary-color, #000)"></path></svg>
             </button>
           </li>
@@ -328,7 +328,7 @@
             <a href="https://www.adidas.nl/superstar-ii-sneakers/JS4009.html?pr=taxonomy_rr&slot=4&rec=mt">
               <img src="images/zwarte-sneakers.jpg" alt="zwarte adidas sneakers">
             </a>
-            <button>
+            <button aria-label="Zet op verlanglijst">
               <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.7206 6H11.7071L16 10.2929L20.2929 6H25.2794L29.6328 13.0743L16 26.7071L2.36719 13.0743L6.7206 6ZM7.2794 7L3.63281 12.9257L16 25.2929L28.3672 12.9257L24.7206 7H20.7071L16 11.7071L11.2929 7H7.2794Z" fill="var(--icon-primary-color, #000)"></path></svg>
             </button>
           </li>
@@ -337,7 +337,7 @@
             <a href="https://www.adidas.nl/vl-court-3.0-schoenen/JS2046.html?pr=taxonomy_rr&slot=5&rec=mt">
               <img src="images/beige-zwarte-strepen-schoen.jpg" alt="beige adidas met zwarte strepen">
             </a>
-            <button>
+            <button aria-label="Zet op verlanglijst">
               <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.7206 6H11.7071L16 10.2929L20.2929 6H25.2794L29.6328 13.0743L16 26.7071L2.36719 13.0743L6.7206 6ZM7.2794 7L3.63281 12.9257L16 25.2929L28.3672 12.9257L24.7206 7H20.7071L16 11.7071L11.2929 7H7.2794Z" fill="var(--icon-primary-color, #000)"></path></svg>
             </button>
           </li>
@@ -346,7 +346,7 @@
             <a href="https://www.adidas.nl/campus-00s-winter-mid-schoenen/JR3735.html?pr=taxonomy_rr&slot=6&rec=mt">
               <img src="images/beige-campus-winter.jpg" alt="winterse beige adidas campus">
             </a>
-            <button>
+            <button aria-label="Zet op verlanglijst">
               <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.7206 6H11.7071L16 10.2929L20.2929 6H25.2794L29.6328 13.0743L16 26.7071L2.36719 13.0743L6.7206 6ZM7.2794 7L3.63281 12.9257L16 25.2929L28.3672 12.9257L24.7206 7H20.7071L16 11.7071L11.2929 7H7.2794Z" fill="var(--icon-primary-color, #000)"></path></svg>
             </button>
           </li>
@@ -497,7 +497,7 @@
     </main>
 
     <footer>
-      <nav>
+      <nav aria-label="Footer snelle links">
         <a href="adidas.nl/account-login">Login</a>
         <a href="https://www.adidas.nl/cart">Winkelwagen</a>
       </nav>
@@ -509,7 +509,7 @@
       </section>
 
       <!-- Navigatiekolommen -->
-      <nav>
+      <nav aria-label="Klantenservice">
         <ul>
           <li><a href="https://www.adidas.nl/help?hcid=DELIVERY">Bezorging</a></li>
           <li><a href="https://www.adidas.nl/bestelling-volgen">Bestelingsstatus</a></li>
