--- a/index.html
+++ b/index.html
@@ -156,28 +156,28 @@
         <ul>
           <li>
             <a href="https://www.adidas.nl/search?q=hiking">
-              <img src="images/hiking.jpg" alt="hiking foto">
+              <img src="images/hiking.jpg" alt="">
               <p>Hiking</p>
             </a>
           </li>
 
           <li>
             <a href="https://www.adidas.nl/search?q=trail+running">
-              <img src="images/trailrunning.jpg" alt="Trailrunning foto">
+              <img src="images/trailrunning.jpg" alt="">
               <p>Trailrunning</p>
             </a>
           </li>
 
           <li>
             <a href="https://www.adidas.nl/search?q=kleding">
-              <img src="images/kleding.jpg" alt="Kleding foto">
+              <img src="images/kleding.jpg" alt="">
               <p>Kleding</p>
             </a>
           </li>
 
           <li>
             <a href="https://www.adidas.nl/search?q=accessoires">
-              <img src="images/accessoires.jpg" alt="accessiores foto">
+              <img src="images/accessoires.jpg" alt="">
               <p>accessoires</p>
             </a>
           </li>
@@ -202,28 +202,28 @@
         <ul>
           <li>
             <a href="https://www.adidas.nl/search?q=motorsport">
-              <img src="images/motorsport.jpg" alt="motorsport foto">
+              <img src="images/motorsport.jpg" alt="">
               <p>Motorsport</p>
             </a>
           </li>
 
           <li>
             <a href="https://www.adidas.nl/padel_tennis">
-              <img src="images/padel.jpg" alt="padel foto">
+              <img src="images/padel.jpg" alt="">
               <p>Padel</p>
             </a>
           </li>
 
           <li>
             <a href="https://www.adidas.nl/search?q=Golf">
-              <img src="images/golf.jpg" alt="golf foto">
+              <img src="images/golf.jpg" alt="">
               <p>Golf</p>
             </a>
           </li>
 
           <li>
             <a href="https://www.adidas.nl/search?q=skateboarding">
-              <img src="images/skateboarding.jpg" alt="skateboarden foto">
+              <img src="images/skateboarding.jpg" alt="">
               <p>Skateboarding</p>
             </a>
           </li>
