--- a/detailpagina.html
+++ b/detailpagina.html
@@ -11,7 +11,7 @@
 
 	
 	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+	<link rel="icon" type="image/svg+xml" href="images/adidas-logo.png">
 </head>
 
 <body class="detailpagina">
