--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Adidas home</title>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="styles/style.css" rel="stylesheet">
-    <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="images/adidas-logo.png">
   </head>
 
   <body>
